--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans&family=IBM+Plex+Mono:wght@500&display=swap');
 body {
   @apply bg-gray-800 text-gray-300;
+  font-family: 'DM Sans', sans-serif;
 }
 
 #codeframe {
-  font-family: 'JetBrains Mono', monospace;
+  /* font-family: 'JetBrains Mono', monospace; */
+  font-family: 'IBM Plex Mono', monospace;
 }
 
 pre,
@@ -35,9 +36,11 @@ textarea {
 .token.property,
 .token.tag,
 .token.boolean,
+.token.function,
 .token.number,
 .token.constant,
-.token.symbol {
+.token.symbol,
+.token.function-variable {
   color: #0cf;
 }
 
@@ -65,6 +68,7 @@ textarea {
 }
 
 .token.regex,
+.token.parameter,
 .token.important {
   color: orange;
 }
